# school_repo

./: .gitignore
Energie-talent/: Contacten
HAN_ESDBOT/: link
IOT-PS/: Persoonlijk analyseformulier-Lars Basissemesters 2023-204.odt  Proeftoetsvragen PS ESD S2 IoT-OSM met antwoorden.odt  Rollen in IoT.ods  Samenvatting.odt  aantekeningen.docx  aantekeningen.odt  planning-rol
IOT-project/: log_uren_ding
Meeloopstage/: Stageovereenkomst AIM 2024-2025.docx  stage-onderwerpen
Minor/: Buitenland-Minor-Stage_Afstuderen_17-05-2023.pptx  Minor_Nederland.ods  Motivation_letter_Lars_van_Duijnhoven.odt  Study_Abroad_Course_Selection_Form_15-01-2025_ingevuld.odg
Minor-Smart-Industries/: .~lock.Notities.odt#  Indeling projecten M06.xlsx  Notities.odt
OSM-Project/: 231120 IPV 1 team 1 .xlsx  231203 IPV 2 team 1 .xlsx  Eindpresentatie OSM-project.pptx  GND_betekenis  Plan_van_Aanpak.html  Testplan - OSM2324-S1-Groep1 - OSM Confluence.html  Testplan.html
Project-WoR/: IPV (20).xml.xlsx  README.md  WoR-project vragenlijst (Antwoorden).xlsx  presentatie_WoR TT S1 2024 2025.pptx  presentatie_WoR eindverslagS1 2024 2025.pptx
Stage/: Stageovereenkomst AIM 2024-2025.docx
Stage ASMPT/: .~lock.Stageplan_Lars_van_Duijnhoven.odt#  HBO-i Kubus per profiel uitwerking v4.1.xlsx  Stageovereenkomst AIM 2025-2026.v1.docx  Stageplan_Lars_van_Duijnhoven.odt
Stage Inspiro/: Instructie stageplan v2.docx  Stageovereenkomst AIM 2024-2025.docx  Stageplan Lars van Duijnhoven.docx  Template stageplan v2.docx
WoR-PS/: Les 1.odt  Les_2.odt  Les_RUP_23-09-2024.odt  Les_Vergaderingen_30-09-2024.odt  Pers leerdoelen beoordeling S1 2024-2025.xlsx  Vooronderzoeken beoordeling S1 2024-2025.xlsx  WOR PV 2024-2025 S1 VERGADEREN en BESLUITVORMING.pptx  WOR projectvoorbereiding LES 1 2024-2025 S1.pptx  WoR PV 2024 2025 S1 METRIEKEN.pptx  feedback_groep_1  random-shit.odt
WoR-World/Opdrachten/testWorkspace/src/time_opdracht/: CMakeLists.txt  package.xml
WoR-World/Opdrachten/testWorkspace/src/time_opdracht/src/: add_two_ints_server.cpp  publisherOnOff_client.cpp  time_publisher.cpp  time_subscriber.cpp
WoR-World/Opdrachten/testWorkspace/src/time_opdracht/srv/: ServiceTypes.srv
(+676 files in other folders)
